[MOSIP-33324]
Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>